--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -5,11 +5,25 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-                <a class="nav-link" href="#">LOGO <span class="sr-only">(current)</span></a>
+            {# accès à page d'accueil si clic sur le logo #}
+                <a class="nav-link" href="#">LOGO<span class="sr-only">(current)</span></a> 
+            </li>
+            
+            <li class="nav-item">
+                <a class="nav-link" href="#">Se connecter</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Créer un compte</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Nous contacter</a>
+            </li>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Deconnexion</a>
+            </li>
+
+<li class="nav-item dropdown">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">menu déroulant</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
