--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -1,4 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <img src="{{ asset('assets/img/Logo ferme 2.svg') }}" alt=""  height="180px" class="mb-1" data-toggle="modal">
+
     <a class="navbar-brand" href="#">Logo</a>
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -52,11 +54,6 @@
             {% endif %}
 
         </ul>
-
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Chercher</button>
-        </form>
 
     </div>
 </nav>
