--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <img src="{{ asset('assets/img/Logo ferme 2.svg') }}" alt=""  height="180px" class="mb-1" data-toggle="modal">
-
-    <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand" href="#">
+            <img src="{{ asset('assets/img/Logo ferme 2.svg') }}" alt="logo" height="180px" data-toggle="modal"></img>
+        </a>
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-        aria-expanded="false" aria-label="Toggle navigation"></button>
+aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon">fa fa-reorder</button>
+
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
@@ -56,4 +57,5 @@
         </ul>
 
     </div>
+
 </nav>
