--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,7 +1,7 @@
-<h1>Hi! Please confirm your email!</h1>
-
+<h1>Bonjour. Merci de votre inscription sur La Main Verte ! Merci de confirmer votre inscription !</h1>
+<img src = "{{asset('assets/img/Logo ferme 2.svg')}}" alt="logo"></img>
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
+    Confirmez votre inscription en cliquant sur le lien suivant : <br><br>
     <a href="{{ signedUrl|raw }}">Confirm my Email</a>.
     This link will expire in {{ expiresAt|date('g') }} hour(s).
 </p>
