création barre de recherche + page résultats

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -48,7 +48,7 @@
     </div>
 </div>
 
-<form>
+<form action="{{ path('company_result')}}" method="GET">
     <div class="row">
         <div class="col">
             <input type="text" class="form-control" name="city" placeholder="Entrez le nom de votre ville">
