--- a/templates/stock/edit.html.twig
+++ b/templates/stock/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Stock{% endblock %}
+{% block title %}Stock disponible{% endblock %}
 
 {% block body %}
-    <h1>Edit Stock</h1>
+    <h1>Stock disponible chez {{}}</h1>
 
     {{ include('stock/_form.html.twig', {'button_label': 'Update'}) }}
 
