--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -1,17 +1,17 @@
-<footer class="footer text-center bg-dark">
+<footer class="footer text-center bg-dark fixed-bottom">
 	<div class="container">
             <ul class="list-inline">
                 <li class="list-inline-item">
-                    <a class="list-inline-item nav-link" href="#">A propos</a>
+                    <a class="nav-link" href="{{ path('app_propos') }}">A propos</a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="list-inline-item nav-link" href="#">Mentions légales</a>
+                    <a class="nav-link" href="#">Mentions légales</a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="list-inline-item nav-link" href="#">Conditions générales d'utilisation</a>
+                    <a class="nav-link" href="#">Conditions générales d'utilisation</a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="list-inline-item nav-link" href="#">Vos données</a>
+                    <a class="nav-link" href="#">Vos données</a>
                 </li>
             </ul>
 	</div>
