--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -8,6 +8,10 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_index')}}">Accueil</a>
+            </li>
+
             {% if app.user %}
 
                 <li class="nav-item">
@@ -32,10 +36,13 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nous contacter</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-item nav-link" href="#">Supprimer mon compte</a>
+                    </li>
+                {% endif %}
+
+                {% if is_granted("ROLE_ADMIN") == false %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nous contacter</a>
                     </li>
                 {% endif %}
 
@@ -51,7 +58,10 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
                 <li class="nav-item">
                     <a class="nav-item nav-link" href="{{ path('app_register') }}">Créer un compte</a>
                 </li>
-                
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Nous contacter</a>
+                </li>
+
             {% endif %}
 
         </ul>
