--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,13 +10,21 @@
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.firstname) }}
+        {{ form_row(registrationForm.lastname) }}
+
+        {{ form_row(registrationForm.phone) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Mot de Passe'
         }) }}
+        {{ form_row(registrationForm.photo) }}
+        {{ form_row(registrationForm.address) }}
 
+        
+        <br/>
         {{ form_row(registrationForm.agreeTerms) }}
+        <button type="submit" class="btn btn-primary">Register</button>
 
-        <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
