--- a/templates/company/show.html.twig
+++ b/templates/company/show.html.twig
@@ -3,36 +3,73 @@
 {% block title %}Company{% endblock %}
 
 {% block body %}
-    <h1>Company</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ company.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ company.name }}</td>
-            </tr>
-            <tr>
-                <th>Siret</th>
-                <td>{{ company.siret }}</td>
-            </tr>
-            <tr>
-                <th>Validated</th>
-                <td>{{ company.validated ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ company.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+{# Affichage infos producteur #}
 
-    <a href="{{ path('company_index') }}">back to list</a>
+<h1>{{company.name}}</h1>
 
-    <a href="{{ path('company_edit', {'id': company.id}) }}">edit</a>
+<div class="card mb-3">
+    <img src="{{ asset('assets/img/etalage primeur.jpg') }}" class="card-img-top" style="height: 80px; width: 100px;" alt="...">
+    <div class="card-body">
+        <h5>{{company.averageRating|round(1, 'floor')}}{% if company.averageRating is not null %}/10{% endif %}</h5>
+        <p class="card-text">{{company.description}}</p>
+    </div>
+</div>
 
-    {{ include('company/_delete_form.html.twig') }}
+<h4>Liste des produits</h4>
+<table class="table table-dark">
+    <thead>
+        <tr>
+            <th scope="col">Produits</th>
+            <th scope="col">Quantités dispos</th>
+            <th scope="col">Ajouter au panier</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Courgettes</td>
+            <td>20</td>
+            <td>Ajouter/Enlever</td>
+        </tr>
+        <tr>
+            <td>Carottes</td>
+            <td>50</td>
+            <td>Ajouter/Enlever</td>
+        </tr>
+        <tr>
+            <td>Tomates</td>
+            <td>26</td>
+            <td>Ajouter/Enlever</td>
+        </tr>
+    </tbody>
+</table>
+
+{# Affichage carte Google avec pointeur #}
+
+<div class="card mb-3">
+    <div class="card-body">
+        <br>
+        <br>
+        <h5>Google Map</h5>
+        <br>
+        <br>
+    </div>
+</div>
+
+
+
+
+{# Affichage commentaires producteur #}
+
+
+
+
+
+<a href="{{ path('company_index') }}">back to list</a>
+
+<a class="btn btn-primary" href="{{ path('company_edit', {'id': company.id}) }}">edit</a>
+
+{{ include('company/_delete_form.html.twig') }}
+
+
 {% endblock %}
