Mise en page footer & register

--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="footer text-center bg-dark fixed-bottom">
+<footer class="footer text-center bg-dark">
 	<div class="container">
             <ul class="list-inline">
                 <li class="list-inline-item">
