--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -20,13 +20,13 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
 
                 {% if is_granted ("ROLE_CLIENT") %}
                     <li class="nav-item">
-                        <a class="nav-item nav-link" href="#">Mon compte</a>
+                        <a class="nav-item nav-link" href="{{ path('profil_index') }}">Mon compte</a>
                     </li>
                 {% endif %}
 
                 {% if is_granted ("ROLE_PRODUCTEUR") %}
                     <li class="nav-item">
-                        <a class="nav-item nav-link" href="#">Ma ferme</a>
+                        <a class="nav-item nav-link" href="{{ path('profil_index') }}">Ma ferme</a>
                     </li>
                 {% endif %}
 
