--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -5,13 +5,13 @@
                     <a class="nav-link" href="{{ path('app_propos') }}">A propos</a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="nav-link" href="#">Mentions légales</a>
+                    <a class="nav-link" href="{{ path('app_mentions') }}">Mentions légales</a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="nav-link" href="#">Conditions générales d'utilisation</a>
+                    <a class="nav-link" href="{{ path('app_cgu') }}">Conditions générales d'utilisation</a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="nav-link" href="#">Vos données</a>
+                    <a class="nav-link" href="{{ path('app_rgpd') }}">Vos données</a>
                 </li>
             </ul>
 	</div>
