--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -48,8 +48,8 @@
     </div>
 </div>
 
-<form action="{{ path('company_testCarte')}}" method="GET">
-{# <form action="{{ path('company_result')}}" method="GET"> #}
+
+<form action="{{ path('company_result')}}" method="GET">
     <div class="row">
         <div class="col">
             <input type="text" class="form-control" name="city" placeholder="Entrez le nom de votre ville">
