--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -42,6 +42,8 @@
 </table>
 {% endif %}
 
+
+{% if is_granted ('ROLE_PRODUCTEUR')== false and is_granted ('ROLE_ADMIN') == false  %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4">Bienvenue sur la main verte</h1>
@@ -68,41 +70,41 @@
 <br>
 <br>
 
+
+
+
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
+
+        {% for company in companies %}
+        {% if loop.first %}
+
+
         <div class="carousel-item active">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
+            <a href="{{ path('company_show', {company : company.id}) }}" class="streched-link">
+            <img src="{{ asset('/assets/img/etalage primeur.jpg') }}" alt="" class="d-block w-30">            
+            <h5>{{company.name}}</h5>
+            <p>{{company.description}}</p>
+            </a>
         </div>
+
+
+
+        {% else %}
+
         <div class="carousel-item">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
+            <a href="{{ path('company_show', {company : company.id}) }}" class="streched-link">
+            <img src="{{ asset('/assets/img/etalage primeur.jpg') }}" alt="" class="d-block w-30">            
+            <h5>{{company.name}}</h5>
+            <p>{{company.description}}</p>
+            </a>
         </div>
-        <div class="carousel-item">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
+
+
+        {% endif %}
+        {% endfor %}
+
+
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -115,6 +117,9 @@
 </div>
 
 
+
+
+{% endif %}
 
 
 {% if is_granted ("ROLE_PRODUCTEUR")%}
