--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_profil') }}">back to list</a>
+    <a href="{{ path('profil_index') }}">Retour au profil</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
