affichage + gestion des companies

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -9,37 +9,36 @@
 
 <h1>Statut "Producteur" à valider</h1>
 
-
+<form action="{{ path('app_validated-company')}}" method="POST">
 <table class="table">
     <thead class="thead-dark">
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Prénom</th>
             <th scope="col">Nom</th>
-            <th scope="col">Email</th>
+            <th scope="col">N° Siret</th>
+            <th scope="col">Description</th>
+            <th scope="col">À valider</th>
         </tr>
     </thead>
     <tbody>
+
+    {% for company in Vcompanies %}
+    
         <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row">{{ company.id }}</th>
+            <td>{{ company.name }}</td>
+            <td>{{ company.siret }}</td>
+            <td>{{ company.description }}</td>
+            <td> <input type="checkbox" name="companyValidated[]" value={{ company.id }} id="companyValidated{{company.id}}" > </td>
         </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-        </tr>
+
+    {% endfor %}
     </tbody>
 </table>
+
+<button type="submit">Mettre à jour</button>
+</form>
+
 {% endif %}
 
 
