--- a/templates/contact/new.html.twig
+++ b/templates/contact/new.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Contact{% endblock %}
+{% block title %}Contactez-nous{% endblock %}
 
 {% block body %}
-    <h1>Create new Contact</h1>
+
+    <h1>Contactez-nous</h1> <br>
 
     {{ include('contact/_form.html.twig') }}
 
