--- a/templates/contact/show.html.twig
+++ b/templates/contact/show.html.twig
@@ -1,38 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Récapitulatif demande{% endblock %}
 
 {% block body %}
-    <h1>Contact</h1>
 
     <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ contact.id }}</td>
-            </tr>
-            <tr>
-                <th>Created_at</th>
-                <td>{{ contact.createdAt ? contact.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Firstname</th>
-                <td>{{ contact.firstname }}</td>
-            </tr>
-            <tr>
-                <th>Lastname</th>
-                <td>{{ contact.lastname }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ contact.email }}</td>
-            </tr>
-        </tbody>
-    </table>
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ contact.id }}</td>
+			</tr>
+			<tr>
+				<th>Prenom</th>
+				<td>{{ contact.firstname }}</td>
+			</tr>
+			<tr>
+				<th>Nom</th>
+				<td>{{ contact.lastname }}</td>
+			</tr>
+			<tr>
+				<th>Email</th>
+				<td>{{ contact.email }}</td>
+			</tr>
+			<tr>
+				<th>Message</th>
+				<td>{{ contact.content }}</td>
+			</tr>
 
-    <a href="{{ path('contact_index') }}">back to list</a>
+		</tbody>
+	</table>
 
-    <a href="{{ path('contact_edit', {'id': contact.id}) }}">edit</a>
-
-    {{ include('contact/_delete_form.html.twig') }}
 {% endblock %}
