--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,6 +1,41 @@
+
 #map{
-  width: 100vw;
-  height: 100vh;
+  width: 80vw;
+  height: 80vh;
+}
+
+.display-4{
+  text-align: center;
+}
+
+a{
+  color: #336699;
+}
+.bg-dark{
+  background-color: darkolivegreen!important;
+}
+a.nav-link{
+  color: whitesmoke!important;
+}
+
+.nav-tabs .nav-link{
+  color: black!important;
+}
+
+.btn{
+  transition: none!important;
+}
+.btn.btn-primary{
+  background-color: darkolivegreen ;
+  border-color: black;
+  color: black;
+  font-weight: bold;
+}
+.btn.btn-danger {
+  background-color: #ff5050;
+  border-color: black;
+  color: black;
+  font-weight: bold;
 }
 
 .company_card_img {
@@ -13,3 +48,19 @@
   border-width: 1px 1px 1px 0px;
   padding: 5px 2px 5px 2px;
 }
+
+/* .carouselCompany{
+  text-align: center;
+}
+
+.d-block{
+  text-align: center!important;
+} */
+
+/* .grid{
+
+}
+
+.grid-item{
+  
+} */
