MAJ routes pour contact

--- a/templates/app/mentions.html.twig
+++ b/templates/app/mentions.html.twig
@@ -19,7 +19,7 @@
             <p>
                 <strong>Adresse postale : </strong>La Main Verte - 30 rue Louis Loucheur - 69009 LYON (France)</br>
                 <strong>Téléphone : </strong>0.800.000.000</br>
-                <strong>Adresse électronique : </strong>admin@lamainverte.com
+                <strong>Adresse électronique : </strong> <a href="{{ path('contact_new')}}">admin@lamainverte.com</a>
             </p>
 
         <hr class="my-2">
@@ -34,7 +34,7 @@
         <h2>Traitement des données à caractères personnelles</h2>
             <p>
                 Nous vous invitons à prendre connaissance de notre <a href="{{path('app_rgpd')}}">Politique de confidentialité</a></br>
-                Chaque internaute peut exercer ses droits en écrivant à : <a href="#">admin@lamainverte.com</a>
+                Chaque internaute peut exercer ses droits en écrivant à : <a href="{{ path('contact_new')}}">admin@lamainverte.com</a>
             </p>
 
     </div>
