--- a/templates/app/rgpd.html.twig
+++ b/templates/app/rgpd.html.twig
@@ -33,7 +33,7 @@
 				</li>
 				<li>
 					Nous vous désignons la personne en charge de la protection de vos données notre Délégué à la Protection des données.</br>
-					Notre DPO est l'administrateur que vous pouvez contacter à l'adresse : <a href="#">admin@lamainverte.com</a>
+					Notre DPO est l'administrateur que vous pouvez contacter à l'adresse :  <a href="{{ path('contact_new')}}">admin@lamainverte.com</a>
 				</li>
 			</ul>
 
