--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -59,7 +59,7 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
                     <a class="nav-item nav-link" href="{{ path('app_register') }}">Créer un compte</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Nous contacter</a>
+                    <a class="nav-link" href="{{ path('contact_new')}}">Nous contacter</a>
                 </li>
 
             {% endif %}
