--- a/templates/app/a-propos.html.twig
+++ b/templates/app/a-propos.html.twig
@@ -6,44 +6,39 @@
 {% block body %}
 
 <div class="jumbotron">
-    <h1 class="display-5">A propos</h1> <br><br>
 
-        <h2>Qui sommes nous ?</h2> <br>
+    <h1 class="display-5">La Main Verte</h1>
 
-    <p class="lead">
+    <hr class="my-2">
+
+        <h2>Qui sommes nous ?</h2>
+
+    <p>
         La Main Verte permet de mettre en relation directe des producteurs locaux et des consommateurs avides de circuit court (locavores).</br>
 
         Le client, soucieux du circuit court , veut trouver le (ou les) producteur(s) le(s) plus proche(s) du point de retrait qu’il choisira.</br>
 
         Quand le client choisit un producteur dont la localisation lui convient, il accède à une liste des produits disponibles 
-        et peut passer une commande. <br> A la validation de sa commande, le producteur prépare le panier et le met à sa disposition 
+        et peut passer une commande. <br> 
+        A la validation de sa commande, le producteur prépare le panier et le met à sa disposition 
         dans le point de retrait choisi. Il informe le client par mail de la mise à disposition de sa commande.</br>
 
-        Le producteur gère sa liste de produits et son stock. Il peut obtenir des statistiques basées sur l’historique des commandes. <br>
+        Le producteur gère sa liste de produits et son stock. Il peut obtenir des statistiques basées sur l’historique des commandes. 
     </p>
     
     <hr class="my-2">
-        <h2>Notre mission</h2> <br>
+        <h2>Notre mission : </h2> 
 
-            <h3>Coté producteurs et artisans</h3> <br>
+            <h3>Coté producteurs et artisans</h3> 
 
                 <p>L'aider à valoriser son travail "pour de bon” ; le faire connaître et l'aider à rayonner sur sa région mais également 
-                la France entière ; l'accompagner dans le développement de ses ventes directes en Circuit-Court.</p> <br>
+                la France entière ; l'accompagner dans le développement de ses ventes directes en Circuit-Court.</p> 
 
-            <h3>Coté consommateurs</h3> <br>
+            <h3>Coté consommateurs</h3> 
 
                 <p>Apporter le goût et la transparence des produits sur leur origines ; faire découvrir de petits producteurs de qualité 
                 difficilement accessibles (qu’on ne trouve pas forcément en bas de chez soi) et pouvoir se faire livrer leurs produits, frais, à domicile le jour de son choix.</p>
     
-    <hr class="my-2">
-
-        <h2>Notre vision</h2> <br>
-
-        
-
-    <p class="lead">
-        <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-    </p>
 </div>
 
 
