--- a/templates/drive/_delete_form.html.twig
+++ b/templates/drive/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('drive_delete', {'id': drive.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('drive_delete', {'id': drive.id}) }}" onsubmit="return confirm('Etrs-vous certain de vouloir supprimer ce point relais ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ drive.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Supprimer</button>
 </form>
