--- a/templates/drive/edit.html.twig
+++ b/templates/drive/edit.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Drive{% endblock %}
+{% block title %}Mise à jour d'un Point Relais{% endblock %}
 
 {% block body %}
-    <h1>Edit Drive</h1>
+    <h1>Mettre à jour un Point Relais</h1>
 
-    {{ include('drive/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('drive/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('drive_index') }}">back to list</a>
+    <a href="{{ path('profil_index') }}">Retour à la liste</a>
 
-    {{ include('drive/_delete_form.html.twig') }}
 {% endblock %}
