--- a/templates/drive/new.html.twig
+++ b/templates/drive/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Drive{% endblock %}
+{% block title %}Nouveau Point Relai{% endblock %}
 
 {% block body %}
-    <h1>Create new Drive</h1>
+    <h1>Créer un Point Relai</h1>
 
     {{ include('drive/_form.html.twig') }}
 
-    <a href="{{ path('drive_index') }}">back to list</a>
+    <a href="{{ path('profil_index') }}">Retour</a>
 {% endblock %}
