--- a/templates/stock/edit.html.twig
+++ b/templates/stock/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Stock disponible{% endblock %}
 
 {% block body %}
-    <h1>Stock disponible chez {{}}</h1>
+    <h1>Stock disponible chez {{stock.company.name}}</h1>
 
     {{ include('stock/_form.html.twig', {'button_label': 'Update'}) }}
 
