--- a/templates/stock/new.html.twig
+++ b/templates/stock/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Stock{% endblock %}
+{% block title %}Nouveau Stock{% endblock %}
 
 {% block body %}
-    <h1>Create new Stock</h1>
+    <h1>Créez un nouveau stock</h1>
 
     {{ include('stock/_form.html.twig') }}
 
