--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -24,7 +24,7 @@
                 
                 <br/>
                 {{ form_row(registrationForm.agreeTerms) }}
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" class="btn btn-primary">S'enregistrer</button>
 
             {{ form_end(registrationForm) }}
         </div>
