--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -76,7 +76,7 @@
 
 
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselCompany" class="carousel slide" data-ride="carousel"  data-interval="3000">
     <div class="carousel-inner">
 
         {% for company in companies %}
@@ -109,11 +109,11 @@
 
 
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselCompany" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselCompany" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
