--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,7 +3,10 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+<h1>Liste des utilisateurs</h1>
+<form action="{{ path('user_modify_role')}}" method="POST">
+
+    <button type="submit">Enregistrer les modifications</button>
 
     <table class="table">
         <thead>
@@ -11,37 +14,52 @@
                 <th>Id</th>
                 <th>Email</th>
                 <th>Roles</th>
-                <th>Password</th>
                 <th>Firstname</th>
                 <th>Lastname</th>
                 <th>Photo</th>
                 <th>Phone</th>
-                <th>actions</th>
+                
             </tr>
         </thead>
         <tbody>
-        {% for user in users %}
+            {% for user in users %}
+
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
+                <td>
+                    <select name="roles[{{ user.id }}]" id="">
+                        {% if "ROLE_PRODUCTEUR" in user.roles %}
+                        <option value="ROLE_PRODUCTEUR" selected>Producteur</option>
+                        <option value="ROLE_CLIENT">Client</option>
+                        <option value="ROLE_ADMIN">Administrateur</option>
+                        {% endif %}
+
+                        {% if "ROLE_CLIENT" in user.roles %}
+                        <option value="ROLE_PRODUCTEUR" selected>Producteur</option>
+                        <option value="ROLE_CLIENT" selected>Client</option>
+                        <option value="ROLE_ADMIN">Administrateur</option>
+                        {% endif %}
+
+                        {% if "ROLE_ADMIN" in user.roles %}
+                        <option value="ROLE_PRODUCTEUR" selected>Producteur</option>
+                        <option value="ROLE_CLIENT">Client</option>
+                        <option value="ROLE_ADMIN" selected>Administrateur</option>
+                        {% endif %}
+
+                    </select>
+                </td>
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
                 <td>{{ user.photo }}</td>
                 <td>{{ user.phone }}</td>
-                <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-                </td>
+                
             </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-        {% endfor %}
+
+            {% endfor %}
+
         </tbody>
     </table>
+</form>
 
-    <a href="{{ path('user_new') }}">Create new</a>
 {% endblock %}
