--- a/templates/company/show.html.twig
+++ b/templates/company/show.html.twig
@@ -18,36 +18,53 @@
 </div>
 
 <h4>Liste des produits</h4>
+
 <table class="table table-dark">
     <thead>
         <tr>
             <th scope="col">Produits</th>
             <th scope="col">Quantités dispos</th>
+            <th scope="col">Prix unitaire</th>
             <th scope="col">Ajouter au panier</th>
+            <th scope="col">Retirer du panier</th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>Courgettes</td>
-            <td>20</td>
-            <td>Ajouter/Enlever</td>
-        </tr>
-        <tr>
-            <td>Carottes</td>
-            <td>50</td>
-            <td>Ajouter/Enlever</td>
-        </tr>
-        <tr>
-            <td>Tomates</td>
-            <td>26</td>
-            <td>Ajouter/Enlever</td>
-        </tr>
+            {% for stock in stocks %}
+                <tr>
+                    {# {% if stock.description == "" %} #}
+                        <td>{{ stock.product.name}}</td>
+                    {# {% else %} #}
+                        {# <td>{{ stock.description }}</td> #}
+                    {# {% endif %} #}
+                    {% if stock.quantity == 0 %}
+                        <td><i>épuisé</i></td>
+                    {% else %}                        
+                        <td>{{ stock.quantity }} {{ stock.conditioning }}</td>
+                    {% endif %}
+                    <td>{{ stock.price }} €</td>
+                    {% if stock.quantity == 0 %}
+                    <td colspan="2"> </td>
+                    {% else %}
+                    <td>
+                        <a href="{{ path('cart_add', {'id': stock.id}) }}"><i class="fa fa-cart-plus" style='font-size:24px'></i></a>
+                    </td>
+                    <td>
+                        <a href="{{ path('cart_remove', {'id': stock.id}) }}"><i class="fa fa-trash-o" style='font-size:24px'></i></a>
+                    </td>
+                    {% endif %}
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="5">aucun produit disponible</td>
+                </tr>
+            {% endfor %}
     </tbody>
 </table>
 
 {# Affichage carte Google avec pointeur #}
 
-<div class="card mb-3">
+{# <div class="card mb-3">
     <div class="card-body">
         <br>
         <br>
@@ -55,7 +72,7 @@
         <br>
         <br>
     </div>
-</div>
+</div> #}
 
 
 
@@ -89,9 +106,9 @@
 
 <a href="{{ path('company_index') }}">back to list</a>
 
-<a class="btn btn-primary" href="{{ path('company_edit', {'id': company.id}) }}">edit</a>
+{# <a class="btn btn-primary" href="{{ path('company_edit', {'id': company.id}) }}">edit</a> #}
 
-{{ include('company/_delete_form.html.twig') }}
+{# {{ include('company/_delete_form.html.twig') }} #}
 
 
 {% endblock %}
